--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,32 @@
-<p>login works!</p>
+<div class="container login-container mt-5">
+    <h1 class="text-center mb-4">Iniciar sesión</h1>
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <div class="mb-3">
+        <label for="usuarioEmail" class="form-label">Correo electrónico</label>
+        <input type="email" class="form-control" id="usuarioEmail" formControlName="email" placeholder="Ingresa tu correo electrónico">
+        <div *ngIf="loginForm.get('email')?.touched && loginForm.get('email')?.invalid" class="text-danger">
+          <small *ngIf="loginForm.get('email')?.errors?.['required']">El email es obligatorio.</small>
+          <small *ngIf="loginForm.get('email')?.errors?.['email']">Formato de email inválido.</small>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="usuarioPassword" class="form-label">Contraseña</label>
+        <input type="password" class="form-control" id="usuarioPassword" formControlName="password" placeholder="Ingresa tu contraseña">
+        <div *ngIf="loginForm.get('password')?.touched && loginForm.get('password')?.invalid" class="text-danger">
+          <small *ngIf="loginForm.get('password')?.errors?.['required']">La contraseña es obligatoria.</small>
+        </div>
+      </div>
+      <div class="mb-3 text-center">
+        <a href="#">Olvidaste tu contraseña</a>
+      </div>
+      <button type="submit" class="btn btn-primary w-100">Iniciar sesión</button>
+    </form>
+    <div class="text-center">
+      <p class="mt-4">¿No tienes una cuenta? <a routerLink="/registro">Regístrate</a></p>
+    </div>
+  </div>
+  <footer>
+    <div class="container">
+      <p class="fw-bold">© 2024 DiversiónEnTablero. Todos los derechos reservados.</p>
+    </div>
+  </footer>
