--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -1,1 +1,48 @@
-<p>carrito works!</p>
+<div class="container ">
+    <div class="row ">
+        <aside class="col-12 col-md-3">
+            <header class="container text-center">
+                <h2 class="Logo align-self-start text-start fw-bold">XYZGaming</h2>
+            </header>
+            <nav class="navbar navbar-expand-md navbar-light">
+                <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navCollapse" aria-controls="navCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navCollapse" style="margin-top: 4.4px">
+                    <ul class="navbar-nav flex-column">
+                        <li class="nav-item d-flex align-items-center">
+                            <a class="btn btn-light w-100 mb-2" href="index.html">Seguir Comprando</a>
+                        </li>
+                        <li class="nav-item d-flex align-items-center">
+                            <a class="btn btn-light w-100 mb-2" href="carrito.html">Carrito</a>  
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </aside>
+        <main class="container ">
+            <h2 class="fw-bold text-center fs-1">Carrito</h2>
+            <p id="carrito-vacio" class="fw-bold text-center fs-1">🛒 Tu carrito está vacío</p>
+            <div id="carrito-juegos" class="row mb-4">
+                <!--Esto se va a completar con el js-->
+            </div>
+            <div id="carrito-acciones" class="row text-center">
+                <div class="col-2 align-items-center">
+                    <button id="carrito-acciones-vaciar" class="btn btn-primary">Vaciar Carrito</button>
+                </div>
+                <div class="col-7  d-flex justify-content-end align-items-center ">
+                    <p class="fw-bold fs-4">Total: </p>
+                    <p id="total" class="fw-bold fs-4">$100</p>
+                </div>
+                <div class="col-3 align-items-center">
+                    <button id="carrito-acciones-comprar" class="btn btn-primary">Comprar ahora</button>
+                </div>
+            </div>
+            <p id="carrito-comprado" class="text-center fs-1 mt-5 ">Muchas gracias por su compra</p>
+        </main>
+        
+    </div>
+</div>
+<footer class="container text-center">
+    <p class="fw-bold">© 2024 XYZGaming. Todos los derechos reservados.</p>
+</footer>
