--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -28,7 +28,7 @@
        
         <div class="d-flex justify-content-between">
             <button type="submit" class="btn btn-primary">Guardar Cambios</button>
-            <button  id="btn-volver" type="button" class="btn btn-primary">Volver</button>
+            <button  id="btn-volver" type="button" class="btn btn-primary" routerLink="/index">Volver</button>
         </div>
     </form>
    
