--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -11,10 +11,10 @@
                 <div class="collapse navbar-collapse" id="navCollapse" style="margin-top: 4.4px">
                     <ul class="navbar-nav flex-column">
                         <li class="nav-item d-flex align-items-center">
-                            <a class="btn btn-light w-100 mb-2" href="index.html">Seguir Comprando</a>
+                            <a class="btn btn-light w-100 mb-2" routerLink="/index">Seguir Comprando</a>
                         </li>
                         <li class="nav-item d-flex align-items-center">
-                            <a class="btn btn-light w-100 mb-2" href="carrito.html">Carrito</a>  
+                            <a class="btn btn-light w-100 mb-2" routerLink="/carrito">Carrito</a>  
                         </li>
                     </ul>
                 </div>
@@ -38,7 +38,7 @@
                     <button id="carrito-acciones-comprar" class="btn btn-primary">Comprar ahora</button>
                 </div>
             </div>
-            <p id="carrito-comprado" class="text-center fs-1 mt-5 ">Muchas gracias por su compra</p>
+            <p id="carrito-comprado" class="text-center fs-1 mt-5 fw-bold">Muchas gracias por su compra</p>
         </main>
         
     </div>
