--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,24 +5,24 @@
         <label for="usuarioEmail" class="form-label">Correo electrónico</label>
         <input type="email" class="form-control" id="usuarioEmail" formControlName="email" placeholder="Ingresa tu correo electrónico">
         <div *ngIf="loginForm.get('email')?.touched && loginForm.get('email')?.invalid" class="text-danger">
-          <small *ngIf="loginForm.get('email')?.errors?.['required']">El email es obligatorio.</small>
-          <small *ngIf="loginForm.get('email')?.errors?.['email']">Formato de email inválido.</small>
+          <small class="fw-bold" *ngIf="loginForm.get('email')?.errors?.['required']">El email es obligatorio.</small>
+          <small class="fw-bold" *ngIf="loginForm.get('email')?.errors?.['email']">Formato de email inválido.</small>
         </div>
       </div>
       <div class="mb-3">
         <label for="usuarioPassword" class="form-label">Contraseña</label>
         <input type="password" class="form-control" id="usuarioPassword" formControlName="password" placeholder="Ingresa tu contraseña">
         <div *ngIf="loginForm.get('password')?.touched && loginForm.get('password')?.invalid" class="text-danger">
-          <small *ngIf="loginForm.get('password')?.errors?.['required']">La contraseña es obligatoria.</small>
+          <small class="fw-bold" *ngIf="loginForm.get('password')?.errors?.['required']">La contraseña es obligatoria.</small>
         </div>
       </div>
       <div class="mb-3 text-center">
-        <a href="#">Olvidaste tu contraseña</a>
+        <a routerLink="/recuperacion">Olvidaste tu contraseña</a>
       </div>
       <button type="submit" class="btn btn-primary w-100">Iniciar sesión</button>
     </form>
     <div class="text-center">
-      <p class="mt-4">¿No tienes una cuenta? <a routerLink="/registro">Regístrate</a></p>
+      <p class="mt-4"><a routerLink="/registro">Regístrate</a></p>
     </div>
   </div>
   <footer>
