--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,7 @@ body {
     font-family: var(--font-family);
     margin: 0;
     padding: 0;
-    background-image: url(../img/fondo.png);
+    background-image: url(assets/images/fondo.png);
     background: cover;
     display: flex;
     flex-direction: column;
@@ -96,32 +96,9 @@ small{
     color: white;
 }
 
-.login-container {
-    width: 400px; /* Ancho del contenedor */
-    margin:  auto; /* Centrar vertical y horizontalmente */
-    background-color: #fff; /* Color de fondo del contenedor */
-    border-radius: 10px; /* Bordes redondeados */
-    padding: 30px; /* Espaciado interno */
-    box-shadow: 0px 0px 10px 0px #f3f2f2; /* Sombra */
-}
 
-.recovery-container {
-    width: 400px; /* Ancho del contenedor */
-    margin: auto; /* Centrar vertical y horizontalmente */
-    background-color: #fff; /* Color de fondo del contenedor */
-    border-radius: 10px; /* Bordes redondeados */
-    padding: 30px; /* Espaciado interno */
-    box-shadow: 0px 0px 10px 0px  #f3f2f2;; /* Sombra */
-}
 
-.custom-container{
-    width: 400px; /* Ancho del contenedor */
-    margin: auto; /* Centrar vertical y horizontalmente */
-    background-color: #fff; /* Color de fondo del contenedor */
-    border-radius: 10px; /* Bordes redondeados */
-    padding: 30px; /* Espaciado interno */
-    box-shadow: 0px 0px 10px 0px  #f3f2f2;; /* Sombra */
-}
+
 
 
 
