--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -1,4 +1,4 @@
-<div class="custom-container">
+<div class="container custom-container mt-4">
     <h1 class="text-center">Mi Perfil</h1>
     <form id="perfilForm">
         <div class="mb-3">
