--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,40 +1,46 @@
 <header>
-    <h1 class="text-center mt-5 text-white fw-bold ">Panel de Administración</h1>
-    <nav class="navbar navbar-expand-md navbar-light ">
-        <div class="container-fluid">
-            <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navCollapse" aria-controls="navCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navCollapse">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <button id="btn-logout" class="btn btn-primary">Cerrar sesión</button>
-                    </li>
-                </ul>
-            </div>
+    <h1 class="text-center mt-5 text-white fw-bold">Panel de Administración</h1>
+    <nav class="navbar navbar-expand-md navbar-light">
+      <div class="container-fluid">
+        <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navCollapse" aria-controls="navCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navCollapse">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <button id="btn-logout" class="btn btn-primary" (click)="logout()">Cerrar sesión</button>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
-    
-</header>  
-<div class="container">
+  </header>
+  <div class="container">
     <div class="table-responsive mt-5">
-        <table class="table table-bordered table-striped">
-            <thead>
-                <tr>
-                    <th>Nombre Completo</th>
-                    <th>Nombre Usuario</th>
-                    <th>Email</th>
-                    <th>direccion</th>
-                    <th>Fecha Nacimiento</th>
-                    <th>Password</th>
-                </tr>
-            </thead>
-            <tbody id="tabla-usuarios">
-                <!-- Aquí se cargarán los usuarios mediante JavaScript -->
-            </tbody>
-        </table>
+      <table class="table table-bordered table-striped">
+        <thead>
+          <tr>
+            <th>Nombre Completo</th>
+            <th>Nombre Usuario</th>
+            <th>Email</th>
+            <th>Dirección</th>
+            <th>Fecha Nacimiento</th>
+            <th>Password</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let usuario of usuarios">
+            <td>{{ usuario.nombre_completo }}</td>
+            <td>{{ usuario.usuario }}</td>
+            <td>{{ usuario.email }}</td>
+            <td>{{ usuario.direccion_despacho }}</td>
+            <td>{{ usuario.fecha_nacimiento }}</td>
+            <td>{{ usuario.password }}</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-</div>
-<footer >
+  </div>
+  <footer>
     <p class="fw-bold">© 2024 XYZGaming. Todos los derechos reservados.</p>
-</footer>
+  </footer>
