agregando funcionalidad al componente recuperacion

--- a/src/app/components/recuperacion/recuperacion.component.html
+++ b/src/app/components/recuperacion/recuperacion.component.html
@@ -8,7 +8,7 @@
             <input type="email" class="form-control" id="usuarioEmail" aria-describedby="emailHelp"
                 placeholder="Ingresa tu correo electrónico">
         </div>
-        <button type="button" id="mostrarPasswordBtn" class="btn btn-primary w-100">Mostrar contraseña</button>
+        <button type="button" id="mostrarPasswordBtn" class="btn btn-primary w-100" (click)="mostrarPassword()">Mostrar contraseña</button>
     </form>
     <div class="text-center mt-3">
         <a routerLink="/login">Volver</a>
