--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -16,7 +16,7 @@
                             <button id="btn-logout" *ngIf="isLoggedIn" class="btn btn-light w-100 mb-2" (click)="logout()">Cerrar sesión</button>
                         </li>
                         <li class="nav-item">
-                            <button id="todos" class="btn btn-light w-100 mb-2 boton-categoria" (click)="filtrarJuegos('todos')">Todos los juegos</button>
+                            <button id="todos" class="btn btn-light w-100 mb-2 boton-categoria" (click)="filtrarJuegos('todos')">Todos los Juegos</button>
                         </li>
                         <li class="nav-item">
                             <button id="play5" class="btn btn-light w-100 mb-2 boton-categoria" (click)="filtrarJuegos('play5')">Play5</button>
