optimizando imagenes y documentando pruebas unitarias

--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -30,8 +30,8 @@
                     </div>
                     <div class="col-2 d-flex justify-content-center align-items-center">
                         <div>
-                            <small class="fw-bold">Nombre</small>
-                            <h3 class="fw-bold">{{ juego.titulo }}</h3>
+                            <small class="fw-bold ">Nombre</small>
+                            <h3 class="fw-bold card-title">{{ juego.titulo }}</h3>
                         </div>
                     </div>
                     <div class="col-2 d-flex justify-content-center align-items-center">
