--- a/documentation/components/IndexComponent.html
+++ b/documentation/components/IndexComponent.html
@@ -715,21 +715,21 @@
         id:&quot;play51&quot;,
         categoria: &quot;play5&quot;,
         titulo:&quot;Play5 01&quot;,
-        Image: &quot;assets/images/play51.png&quot;,
+        Image: &quot;assets/images/play5/play51.png&quot;,
         precio: 100,
     },
     {
       id:&quot;play52&quot;,
       categoria: &quot;play5&quot;,
       titulo:&quot;Play5 02&quot;,
-      Image: &quot;assets/images/play52.png&quot;,
+      Image: &quot;assets/images/play5/play52.png&quot;,
       precio: 100,
     },
     {
       id:&quot;play53&quot;,
       categoria: &quot;play5&quot;,
       titulo:&quot;Play5 03&quot;,
-      Image: &quot;assets/images/play53.png&quot;,
+      Image: &quot;assets/images/play5/play53.png&quot;,
       precio: 100,
     },
     {
@@ -971,21 +971,21 @@ export class IndexComponent {
         id:&quot;play51&quot;,
         categoria: &quot;play5&quot;,
         titulo:&quot;Play5 01&quot;,
-        Image: &quot;assets/images/play51.png&quot;,
+        Image: &quot;assets/images/play5/play51.png&quot;,
         precio: 100,
     },
     {
       id:&quot;play52&quot;,
       categoria: &quot;play5&quot;,
       titulo:&quot;Play5 02&quot;,
-      Image: &quot;assets/images/play52.png&quot;,
+      Image: &quot;assets/images/play5/play52.png&quot;,
       precio: 100,
     },
     {
       id:&quot;play53&quot;,
       categoria: &quot;play5&quot;,
       titulo:&quot;Play5 03&quot;,
-      Image: &quot;assets/images/play53.png&quot;,
+      Image: &quot;assets/images/play5/play53.png&quot;,
       precio: 100,
     },
     {
