configurando recuperacion de contraseña

--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -32,7 +32,7 @@
                         </li>
                         <li class="nav-item d-flex align-items-center">
                             <a class="btn btn-light w-100 mb-2 boton-carrito" routerLink="/carrito">Carrito</a>
-                            <span id="numcarrito" class="numero ms-2 mb-2 badge bg-white text-dark fs-6">0</span>
+                            <span id="numcarrito" class="numero ms-2 mb-2 badge bg-white text-dark fs-6">{{ numeroCarrito }}</span>
                         </li>
                     </ul>
                 </div>
