--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -26,6 +26,7 @@
             <th>Dirección</th>
             <th>Fecha Nacimiento</th>
             <th>Password</th>
+            <th>Acciones</th>
           </tr>
         </thead>
         <tbody>
@@ -36,6 +37,10 @@
             <td>{{ usuario.direccion_despacho }}</td>
             <td>{{ usuario.fecha_nacimiento }}</td>
             <td>{{ usuario.password }}</td>
+            <td>
+              <!-- Botón de eliminar -->
+              <button class="btn btn-danger" (click)="eliminar(usuario)">Eliminar</button>
+            </td>
           </tr>
         </tbody>
       </table>
